--- a/hw2/readme
+++ b/hw2/readme
@@ -1,31 +1,38 @@
-# 泊松图像编辑和基于深度学习的图像编辑（Pix2Pix）与PyTorch
+# hw2
 
-本仓库包含了使用PyTorch实现的两种图像编辑技术：
-1. **DIP (泊松图像编辑)**：一种用于无缝图像克隆和编辑的经典方法。
-2. **基于深度学习的DIP (Pix2Pix)**：使用生成对抗网络（GANs）进行图像到图像翻译任务的现代方法。
+泊松图像编辑和基于深度学习的图像编辑（Pix2Pix）与PyTorch。
 
-## 目录
+## 项目描述
 
-- [简介](#简介)
-- [安装](#安装)
-- [使用](#使用)
-- [结果展示](#结果展示)
-- [贡献](#贡献)
-- [许可证](#许可证)
-
-## 简介
-
-### 泊松图像编辑
 泊松图像编辑是一种允许以协调的方式编辑图像的技术，使得更改能够在整个图像中传播，同时保留原始图像的整体结构和外观。
 
-### Pix2Pix
 Pix2Pix是一种用于图像到图像翻译任务的条件生成对抗网络（cGAN）。它特别适用于图像分割、风格迁移等任务。Pix2Pix学习将输入图像映射到输出图像，允许将一个图像转换为另一个图像。
 
-## 安装
+## 使用方法
 
-开始之前，请克隆仓库并安装所需的包：
+1. 确保你的环境中安装了Python，以及NumPy和SciPy库。
+2. 将源图像文件放置在项目目录下的 `images` 文件夹中。
+3. 运行 脚本，指定源图像文件名和目标点坐标。
+4. 查看变形后的图像结果。
 
-```bash
-git clone https://github.com/yourusername/poisson-pix2pix-pytorch.git
-cd poisson-pix2pix-pytorch
-pip install -r requirements.txt
+## 结果展示
+
+以下是源图像和变形后图像的对比：
+
+### 仿射变换
+![Source Image](0674e89f15384ba80263593c059e81d5.png)
+
+### RBF
+![Warped Image](feb3e54c0d044afc4cb1bd8032e4a539.png)
+
+## 注意事项
+
+- 请确保输入的源图像和目标点坐标是正确的。
+- 本项目仅作为图像变形的示例，可能需要根据实际需求进行调整和优化。
+
+## 贡献
+
+欢迎对本项目进行贡献。如果你有任何建议或发现问题，请提交Issue或Pull Request。
+
+
+
